apps/misc/wallabag/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
