apps/misc/wallabag/31-authentik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: wallabag
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - name: https
      port: 9443
      targetPort: 9443
