apps/misc/wallabag/52-httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag
  namespace: wallabag
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - wallabag.white.fm
  rules:
    - backendRefs:
        - name: authentik-server   # public host goes through the Authentik embedded outpost
          namespace: authentik
          port: 80
