apps/misc/wallabag/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag-internal
  namespace: wallabag
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - wallabag.internal.white.fm
  rules:
    - backendRefs:
        - name: wallabag           # internal host hits wallabag directly (no auth)
          port: 80
